--- a/en/index.html
+++ b/en/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="../css/reset.css" media="all">
 	<link rel="stylesheet" href="../css/slick.css" media="all">
 	<link rel="stylesheet" href="../css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="../css/style.css?v4" media="all">
+	<link rel="stylesheet" href="../css/style.css?v5" media="all">
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/html5.js"></script>
@@ -151,11 +151,11 @@
 								<p class="small">
 									Companies on Product Protocol can scale further than ever before. A universal token for the tokenization of any assets allows you to instantly create a digital asset and a decentralized market will enable people from all over the world to purchase it.
 								</p>
-								<div class="mobile-video-button mshow"><a class="js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI">Watch video</a></div>
+								<div class="mobile-video-button mshow"><a class="js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI" onClick="ga ('send', 'event', 'submit', 'Media-Button');">Watch video</a></div>
 							</div>
 							<div class="split-col">
 								<div class="video">
-									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI"></a>
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI" onClick="ga ('send', 'event', 'submit', 'Media-Button');"></a>
 								</div>
 							</div>
 						</div>
@@ -433,7 +433,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-5.jpg" alt="">
+										<img src="/images/team-image-6.jpg" alt="">
 									</div>
 									<div class="team-name">Bam Ki-moon</div>
 									<div class="team-type">Lead Designer</div>
@@ -443,7 +443,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-6.jpg" alt="">
+										<img src="/images/team-image-5.jpg" alt="">
 									</div>
 									<div class="team-name">Eu Chan</div>
 									<div class="team-type">Community manager/Public relations</div>
@@ -483,7 +483,7 @@
 					<h3 class="box-title-ann ta-r">Blog</h3>
 					<div class="news-list">
 						<div class="news-list-item big">
-							<div class="video">
+							<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
