--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" href="css/reset.css" media="all">
 	<link rel="stylesheet" href="css/slick.css" media="all">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="css/style.css?v4" media="all">
+	<link rel="stylesheet" href="css/style.css?v5" media="all">
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/html5.js"></script>
@@ -155,11 +155,11 @@
 								<p class="small">
 									Product Protocol의 회사들은 이전보다도 더 많이 스케일링할 수 있다. 아무 자산의 토큰화를 위한 보편적인 토큰이 디지털 자산을 당장 만들 수 있게 하고 분산적 시장은 전세계 사람들이 그 토큰을 구매할 수 있게 할 것이다.
 								</p>
-								<div class="mobile-video-button mshow"><a class="js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI">비디오를보다</a></div>
+								<div class="mobile-video-button mshow"><a class="js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI" onClick="ga ('send', 'event', 'submit', 'Media-Button');">비디오를보다</a></div>
 							</div>
 							<div class="split-col">
 								<div class="video">
-									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI"></a>
+									<a class="video-button js-fancybox" data-fancybox href="https://youtu.be/IjEgbEW_VxI" onClick="ga ('send', 'event', 'submit', 'Media-Button');"></a>
 								</div>
 							</div>
 						</div>
@@ -435,7 +435,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-5.jpg" alt="">
+										<img src="/images/team-image-6.jpg" alt="">
 									</div>
 									<div class="team-name">Bam Ki-moon</div>
 									<div class="team-type">Lead Designer</div>
@@ -445,7 +445,7 @@
 								</div>
 								<div class="team-slide">
 									<div class="team-image">
-										<img src="/images/team-image-6.jpg" alt="">
+										<img src="/images/team-image-5.jpg" alt="">
 									</div>
 									<div class="team-name">Eu Chan</div>
 									<div class="team-type">Community manager/Public relations</div>
@@ -485,7 +485,7 @@
 					<h3 class="box-title-ann ta-r">블로그</h3>
 					<div class="news-list">
 						<div class="news-list-item big">
-							<div class="video">
+							<div class="video" onClick="ga ('send', 'event', 'submit', 'Media-Button');">
 								<iframe width="100%" height="100%" src="https://www.youtube.com/embed/gjZLQCthU5U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 						</div>
