--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 										<img src="/images/team-image-5.jpg" alt="">
 									</div>
 									<div class="team-name">Eu Chan</div>
-									<div class="team-type">Community manager/Public relations</div>
+									<div class="team-type">Community manager</div>
 									<div class="team-description">
 										
 									</div>
