--- a/en/index.html
+++ b/en/index.html
@@ -119,17 +119,17 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a  href="#investment-popup" data-fancybox class="button white block big">Participate in private sale</a>
+								<a  href="#investment-popup" data-fancybox class="button white block big" onClick="_gaq.push(['_trackEvent', 'Knopka1', 'PrivateSale']);">Participate in private sale</a>
 							</div>
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_e.pdf" title="" target="_blank" class="button white block">Whitepaper</a>
+								<a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_e.pdf" title="" target="_blank" class="button white block" onClick="_gaq.push(['_trackEvent', 'Knopka2', 'WhitePaper']);">Whitepaper</a>
 							</div>
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://github.com/ProductProtocol" class="button white block">Github</a>
+								<a href="https://github.com/ProductProtocol" class="button white block" onClick="_gaq.push(['_trackEvent', 'Knopka3', 'Github']);">Github</a>
 							</div>
 						</div>
 					</div>
@@ -448,7 +448,7 @@
 									<div class="team-name">Eu Chan</div>
 									<div class="team-type">Community manager</div>
 									<div class="team-description">
-										
+										Senior programmer, extensive experience in trading terminals programming, an expert in blockchain development
 									</div>
 								</div>
 							</div>
