--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
 									<div class="team-name">Eu Chan</div>
 									<div class="team-type">Community manager</div>
 									<div class="team-description">
-										
+										Senior programmer, extensive experience in trading terminals programming, an expert in blockchain development
 									</div>
 								</div>
 							</div>
