--- a/index.html
+++ b/index.html
@@ -123,17 +123,17 @@
 					<div class="form main-form">
 						<div class="form-box">
 							<div class="form-box-container js-to-bottom-panel">
-								<a href="#investment-popup" data-fancybox class="button white block big">개인적 판매에 참여하다</a>
+								<a href="#investment-popup" data-fancybox class="button white block big" onClick="_gaq.push(['_trackEvent', 'Knopka1', 'PrivateSale']);">개인적 판매에 참여하다</a>
 							</div>
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_k.pdf" title="" target="_blank" class="button white block">백지</a>
+								<a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_k.pdf" title="" target="_blank" class="button white block" onClick="_gaq.push(['_trackEvent', 'Knopka2', 'WhitePaper']);">백지</a>
 							</div>
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://github.com/ProductProtocol" class="button white block">기생충</a>
+								<a href="https://github.com/ProductProtocol" class="button white block" onClick="_gaq.push(['_trackEvent', 'Knopka3', 'Github']);">기생충</a>
 							</div>
 						</div>
 					</div>
