--- a/en/index.html
+++ b/en/index.html
@@ -542,7 +542,7 @@
 					<h3 class="box-title-ann ta-r">Social</h3>
 					<div class="socials-list">
 						<div class="socials-list-item">
-							<a href="https://t.me/productprotocolio" class="social-image">
+							<a href="https://t.me/pprotocol" class="social-image">
 								<img src="/images/social-image-1.png" alt="">
 							</a>
 						</div>
