--- a/en/index.html
+++ b/en/index.html
@@ -31,7 +31,7 @@
 			<nav class="header-nav">
 				<div class="header-nav-button"><div class="header-nav-button-icon"></div></div>
 				<ul class="header-nav-list">
-					<li class="header-nav-list-item"><a href="https://pprotocol.org/" title="" target="_blank">Protocol</a></li>
+					<li class="header-nav-list-item"><a href="https://pprotocol.org/" target="_blank" class="button white block">MVP</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_e.pdf" title="" target="_blank">White Paper</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_OP_e.pdf" title="" class="current" target="_blank">One Pager</a></li>
 					<li class="header-nav-list-item"><a href="/profile" title="">Profile</a></li>
@@ -57,9 +57,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -125,7 +123,7 @@
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://github.com/ProductProtocol" class="button white block" onClick="_gaq.push(['_trackEvent', 'Knopka3', 'Github']);">Github</a>
+								<a href="https://pprotocol.org/" target="_blank" class="button white block">MVP</a>
 							</div>
 						</div>
 					</div>
@@ -170,9 +168,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -254,9 +250,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -331,7 +325,6 @@
 								</div>
 								<div class="roadmap-slide">
 									<h3 class="first-title">Stage III<br>Q4/ 2018</h3>
-									<div class="roadmap-slider-box">MVP</div>
 									<div class="roadmap-slider-box">Roadshow</div>
 									<div class="roadmap-slider-box">Private Sale</div>
 									<div class="roadmap-slider-box">10+ companies confirmation for intergration</div>
@@ -360,6 +353,7 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
+		<!--
 		<div class="top-gradient-bg box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -368,9 +362,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -447,6 +439,7 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
+		-->
 		<div class="colored-bg box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -455,9 +448,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -481,6 +472,7 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
+		<!--
 		<div class="box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -489,9 +481,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
@@ -520,6 +510,7 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
+		-->
 		<div class="colored-bg v4 box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -528,9 +519,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">Protocol</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">Tokensale</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">Roadmap</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">Team</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">Blog</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">Partners</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">Social</a></li>
 				</ul>
 			</div>
