--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<nav class="header-nav">
 				<div class="header-nav-button"><div class="header-nav-button-icon"></div></div>
 				<ul class="header-nav-list">
-					<li class="header-nav-list-item"><a href="https://pprotocol.org/" title="">실험 계획안</a></li>
+					<li class="header-nav-list-item"><a href="https://pprotocol.org/" target="_blank" title="">MVP</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_WP_k.pdf" title="" target="_blank">백지</a></li>
 					<li class="header-nav-list-item"><a href="https://d3ri2ictv4c1x9.cloudfront.net/PP_OP_k.pdf" title="" class="current" target="_blank">하나의 호출기</a></li>
 					<li class="header-nav-list-item"><a href="/profile" title="">윤곽</a></li>
@@ -57,9 +57,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">파트너</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -129,7 +127,7 @@
 						</div>
 						<div class="form-box">
 							<div class="form-box-container">
-								<a href="https://github.com/ProductProtocol" class="button white block" onClick="_gaq.push(['_trackEvent', 'Knopka3', 'Github']);">기생충</a>
+								<a href="https://pprotocol.org/" target="_blank" class="button white block">MVP</a>
 							</div>
 						</div>
 					</div>
@@ -174,9 +172,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">파트너</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -258,9 +254,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">파트너</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -362,6 +356,7 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
+		<!--
 		<div class="top-gradient-bg box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -370,9 +365,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">파트너</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -449,6 +442,7 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
+		-->
 		<div class="colored-bg box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -457,9 +451,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">파트너</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -483,6 +475,7 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
+		<!--
 		<div class="box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -491,9 +484,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">파트너</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
@@ -522,6 +513,7 @@
 				<a href="/users/sign_in" class="button white moved-to-bottom-panel hide">Participate in private sale</a>
 			</div>
 		</div>
+		-->
 		<div class="colored-bg v4 box-wrapper">
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
@@ -530,9 +522,7 @@
 					<li class="page-scroller-item"><a href="#protocol" class="page-scroller-link">실험 계획안</a></li>
 					<li class="page-scroller-item"><a href="#tokensale" class="page-scroller-link">토큰 판매</a></li>
 					<li class="page-scroller-item"><a href="#roadmap" class="page-scroller-link">로드맵</a></li>
-					<li class="page-scroller-item"><a href="#team" class="page-scroller-link">팀</a></li>
 					<li class="page-scroller-item"><a href="#news" class="page-scroller-link">블로그</a></li>
-					<li class="page-scroller-item"><a href="#partners" class="page-scroller-link">파트너</a></li>
 					<li class="page-scroller-item"><a href="#social" class="page-scroller-link">소셜 네트워크</a></li>
 				</ul>
 			</div>
