--- a/en/index.html
+++ b/en/index.html
@@ -551,7 +551,7 @@
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://medium.com/@p.protocol" class="social-image">
+							<a href="https://medium.com/@product.protocol" class="social-image">
 								<img src="/images/social-image-3.png" alt="">
 							</a>
 						</div>
