--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 							</a>
 						</div>
 						<div class="socials-list-item">
-							<a href="https://medium.com/@p.protocol" class="social-image">
+							<a href="https://medium.com/@product.protocol" class="social-image">
 								<img src="images/social-image-3.png" alt="">
 							</a>
 						</div>
